docs: standardize files with problem statements, approaches, and complexity details.